--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
         "client": "cd client && yarn start",
         "server": "nodemon server.js",
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-        "start" : "node server.js"
+        "start": "node server.js"
     },
     "dependencies": {
+        "@google-cloud/storage": "^7.6.0",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "connect-pg-simple": "^9.0.1",
@@ -15,6 +16,7 @@
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "multer": "^1.4.5-lts.1",
+        "multer-google-storage": "^1.3.0",
         "pg": "^8.11.3",
         "session-file-store": "^1.5.0"
     },
